<resources>
    <string name="app_name">MikanAttendance</string>
    <string name="app_title">Mikan Attendance System</string>
    <string name="username">Username</string>
    <string name="username_input">Input your username</string>
    <string name="password">Password</string>
    <string name="password_input">Input your password</string>
    <string name="login_btn">Login</string>
    <string name="delete_btn">Delete</string>
    <string name="edit_btn">Edit</string>
    <string name="save_btn">Save</string>
    <string name="add_btn">Add</string>
    <!-- Info -->
    <string name="id">ID</string>
    <string name="real_name">Name</string>
    <string name="user_pass">Password</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="user_type">Type</string>
    <!-- User Type -->
    <string name="type_pm">PM</string>
    <string name="type_hr">HR</string>
    <string name="type_sales">Sales</string>
    <string name="type_others">Others</string>
    <!-- Order -->
    <string name="user_id">User ID</string>
    <string name="order_side">Order Side</string>
    <string name="product">Product</string>
    <string name="submit_date">Submit</string>
    <string name="select_submit">Select submit date</string>
    <string name="end_date">End</string>
    <string name="select_end">Select end date</string>
    <string name="remark">Remark</string>
    <!-- Salary -->
    <string name="pay_day">Pay Day</string>
    <string name="salary">Salary</string>
    <!-- Attendance -->
    <string name="attendance_time">Time</string>
    <string name="attendance_status">Status</string>
    <string name="attendance_type">Type</string>
    <string name="status_on_time">On Time</string>
    <string name="status_late">Not On Time</string>
    <string name="status_out">Out Of Range</string>
    <string name="type_on_work">On Work</string>
    <string name="type_off_work">Off Work</string>
    <string name="readme">
        This system is only available for use inside companies.
        Please contact the administrator of your company for registration.
    </string>
</resources>
