<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/user_id"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/userEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textPersonName"
                android:hint="@string/user_id"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/attendance_time"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/atdTimeEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textPersonName"
                android:hint="@string/attendance_time"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/attendance_status"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <RadioGroup
                android:id="@+id/atdStatus"
                android:layout_width="0sp"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/atdOnTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/status_on_time"
                    android:layout_marginStart="-5sp"
                    android:layout_marginLeft="-5sp">
                </RadioButton>

                <RadioButton
                    android:id="@+id/atdLate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/status_late"
                    android:layout_marginStart="-5sp"
                    android:layout_marginLeft="-5sp">
                </RadioButton>

                <RadioButton
                    android:id="@+id/atdOutOfRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/status_out"
                    android:layout_marginStart="-5sp"
                    android:layout_marginLeft="-5sp">
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/attendance_type"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <RadioGroup
                android:id="@+id/atdType"
                android:layout_width="0sp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/atdOnWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/type_on_work"
                    android:layout_marginStart="-5sp"
                    android:layout_marginLeft="-5sp">
                </RadioButton>

                <RadioButton
                    android:id="@+id/atdOffWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/type_off_work"
                    android:layout_marginStart="-5sp"
                    android:layout_marginLeft="-5sp">
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/remark"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/remarkEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:maxLines="20"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textMultiLine"
                android:hint="@string/remark"
                android:textSize="20sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:textSize="20sp"
            android:text="@string/save_btn"
            android:onClick="save">
        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>