<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/id"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/idEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textPersonName"
                android:hint="@string/id"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/real_name"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textPersonName"
                android:hint="@string/real_name"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/user_pass"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/passEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textPassword"
                android:hint="@string/user_pass"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/phone"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/phoneEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="phone"
                android:hint="@string/phone"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/email"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/mailEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textPersonName"
                android:hint="@string/email"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/user_type"
                android:textSize="20sp"
                android:layout_marginLeft="10sp"
                android:layout_gravity="center_vertical"/>

            <RadioGroup
                android:id="@+id/typeEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <RadioButton
                    android:id="@+id/radio_pm"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/type_pm"
                    android:textSize="20sp"
                    android:layout_marginLeft="-5sp"
                    android:layout_marginStart="-5sp">
                </RadioButton>

                <RadioButton
                    android:id="@+id/radio_hr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_hr"
                    android:textSize="20sp"
                    android:layout_marginLeft="-5sp"
                    android:layout_marginStart="-5sp">
                </RadioButton>

                <RadioButton
                    android:id="@+id/radio_sales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_sales"
                    android:textSize="20sp"
                    android:layout_marginLeft="-5sp"
                    android:layout_marginStart="-5sp">
                </RadioButton>

                <RadioButton
                    android:id="@+id/radio_others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_others"
                    android:textSize="20sp"
                    android:layout_marginLeft="-5sp"
                    android:layout_marginStart="-5sp">
                </RadioButton>

            </RadioGroup>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:textSize="20sp"
            android:text="@string/save_btn"
            android:onClick="save">
        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>