<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/user_id"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/userEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textPersonName"
                android:hint="@string/user_id"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/order_side"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/orderSideEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textPersonName"
                android:hint="@string/order_side"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/product"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/productEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textPersonName"
                android:hint="@string/product"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/submit_date"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <Button
                android:id="@+id/submitDateSelect"
                android:layout_width="0sp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:textSize="20sp"
                android:text="@string/select_submit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/end_date"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <Button
                android:id="@+id/endDateSelect"
                android:layout_width="0sp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:textSize="20sp"
                android:text="@string/select_end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10sp"
                android:text="@string/remark"
                android:textSize="20sp"
                android:layout_marginLeft="10sp" />

            <EditText
                android:id="@+id/remarkEdit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:maxLines="20"
                android:ems="10"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:inputType="textMultiLine"
                android:hint="@string/remark"
                android:textSize="20sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:textSize="20sp"
            android:text="@string/save_btn"
            android:onClick="save">
        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>